@@ -7,6 +7,7 @@ v 8.6.0 (unreleased)
   - Fix avatar stretching by providing a cropping feature (Johann Pardanaud)
   - Strip leading and trailing spaces in URL validator (evuez)
   - Update documentation to reflect Guest role not being enforced on internal projects
+  - Allow search for logged out users
 
 v 8.5.2
   - Fix sidebar overlapping content when screen width was below 1200px
